# PEA_ATSP

./: .gitignore  README.md
B&B/: main.cpp
B&B/Tester/: AutomaticTester.cpp  AutomaticTester.h
B&B/algorithm/: BBSolver.cpp  BBSolver.h
B&B/input/: matrix_11x11.atsp  matrix_8x8.atsp  random.atsp  results.csv  test2.atsp
B&B/output/: results.csv  results12.csv  results18.csv  results7.csv
B&B/structures/: Graph.cpp  Graph.h
B&B/utils/: FileRandomizer.cpp  FileRandomizer.h  Timer.cpp  Timer.h
BruteForce/: repo.txt
GeneticAlgorithm/: CMakeLists.txt  main.cpp
GeneticAlgorithm/algorithm/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Node.cpp  Node.h
GeneticAlgorithm/input/: test.atsp
GeneticAlgorithm/mlflow-automation/: best_population_size.py  main.py  mlflow_server.py  simulation.py  tester.py
GeneticAlgorithm/structures/: Graph.cpp  Graph.h
GeneticAlgorithm/utils/: Timer.cpp
TS/: main.cpp
TS/Algorithm/: Node.cpp  Node.h  TabuManager.cpp  TabuManager.h  TabuSearch.cpp  TabuSearch.h
TS/Testers/: Tester.cpp  Tester.h
TS/input/: random.atsp  test.atsp  test2.atsp  test3.atsp  test4.atsp
TS/structures/: Graph.cpp  Graph.h
TS/utils/: FileRandomizer.cpp
